--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ extend-ignore = E203,E501
 follow_imports = silent
 strict_optional = True
 warn_redundant_casts = True
+warn_unused_ignores = True
 disallow_any_generics = True
 check_untyped_defs = True
 no_implicit_reexport = True
@@ -12,4 +13,7 @@ disallow_untyped_defs = True
 namespace_packages = True
 
 [mypy-tests.*]
+ignore_missing_imports = True
+
+[mypy-nltk.*]
 ignore_missing_imports = True
