--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,10 @@ authors = ["David Chanin <chanindav@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.7"
 nltk = "^3.7"
+torch = "^1.11.0"
+transformers = "^4.18.0"
+sentencepiece = "^0.1.96"
+pytorch-lightning = "^1.6.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
