--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ torch = "^1.11.0"
 transformers = "^4.18.0"
 sentencepiece = "^0.1.96"
 pytorch-lightning = "^1.6.2"
+tqdm = "^4.64.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
