fixing evaluate typing

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,7 @@ disallow_any_generics = True
 check_untyped_defs = True
 disallow_untyped_defs = True
 namespace_packages = True
+mypy_path = $MYPY_CONFIG_FILE_DIR/stubs
 
 [mypy-tests.*]
 ignore_missing_imports = True
