adding data augmentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,13 @@ mypy_path = $MYPY_CONFIG_FILE_DIR/stubs
 [mypy-tests.*]
 ignore_missing_imports = True
 
+[mypy-pytest.*]
+ignore_missing_imports = True
+
 [mypy-nltk.*]
+ignore_missing_imports = True
+
+[mypy-flask_cors.*]
 ignore_missing_imports = True
 
 [mypy-tqdm.*]
