adding write permissions to publish job

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,5 +24,8 @@ ignore_missing_imports = True
 [mypy-flask_cors.*]
 ignore_missing_imports = True
 
+[mypy-flask.*]
+ignore_missing_imports = True
+
 [mypy-tqdm.*]
 ignore_missing_imports = True
