fix: adding fetch-depth 0 for release

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,6 +32,8 @@ jobs:
     concurrency: release
     steps:
       - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
       - name: Semantic Release
         uses: relekang/python-semantic-release@master
         with:
