--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ authors = ["David Chanin <chanindav@gmail.com>"]
 python = "^3.7"
 nltk = "^3.7"
 torch = "^1.11.0"
-transformers = "4.18.0"
+transformers = "^4.18.0"
 sentencepiece = "^0.1.96"
 pytorch-lightning = "^1.6.2"
 tqdm = "^4.64.0"
