--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,7 @@
 name = "frame-semantic-transformer"
 version = "0.3.0"
 description = "Frame Semantic Parser based on T5 and FrameNet"
+license = "MIT"
 readme = "README.md"
 repository = "https://github.com/chanind/frame-semantic-transformer"
 authors = ["David Chanin <chanindav@gmail.com>"]
