--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,13 @@ repository = "https://github.com/chanind/frame-semantic-transformer"
 authors = ["David Chanin <chanindav@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8"
 nltk = "^3.7"
-torch = "^1.11.0"
 transformers = "^4.18.0"
-sentencepiece = "^0.1.96"
 pytorch-lightning = "^1.6.2"
 tqdm = "^4.64.0"
+sentencepiece = "^0.1.97"
+protobuf = "^3.20.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -22,6 +22,9 @@ black = "^22.3.0"
 mypy = "^0.950"
 flake8 = "^4.0.1"
 syrupy = "^2.0.0"
+
+[tool.poetry.group.dev.dependencies]
+torch = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
