--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,9 +22,8 @@ black = "^22.3.0"
 mypy = "^0.950"
 flake8 = "^4.0.1"
 syrupy = "^2.0.0"
-
-[tool.poetry.group.dev.dependencies]
-torch = "^1.13.1"
+pygments = "^2.14.0"
+furo = "^2022.12.7"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
