--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pytorch-lightning = "^1.6.2"
 tqdm = "^4.64.0"
 sentencepiece = "^0.1.97"
 protobuf = "^3.20.1"
+nlpaug = "^1.1.11"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
