--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,9 @@ ignore_missing_imports = True
 [mypy-nltk.*]
 ignore_missing_imports = True
 
+[mypy-nlpaug.*]
+ignore_missing_imports = True
+
 [mypy-flask_cors.*]
 ignore_missing_imports = True
 
