--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,6 +8,8 @@ jobs:
       - uses: actions/setup-python@v3
         with:
           python-version: "3.8"
+          # pending https://github.com/python-poetry/poetry/issues/7691
+          version: 1.4.0
       - name: Install Poetry
         uses: snok/install-poetry@v1
       - name: Install dependencies
