chore: updating semantic release config

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,11 +32,9 @@ requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.semantic_release]
-version_variable = [
+version_variables = [
     "frame_semantic_transformer/__init__.py:__version__",
-    "pyproject.toml:version"
+    "pyproject.toml:version",
 ]
 branch = "main"
-upload_to_pypi = true
-upload_to_release = true
 build_command = "pip install poetry && poetry build"
